--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.c" 
                        INCLUDE_DIRS "."
-                       REQUIRES oled_driver mpu9250_driver)
+                       REQUIRES mpu9250_driver)
